Removing return call

--- a/scripts/OutputDifferences.Rmd
+++ b/scripts/OutputDifferences.Rmd
@@ -8,14 +8,14 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Differences in Hector outputs
 
-Hello, this is `leeyabot`! `r emo::ji("robot")`
+Hello, this is `leeyabot`! `r # emo::ji("robot")`
 
 ``` {r differences, echo = FALSE, message = FALSE}
 # Load packages
 library(dplyr)
 library(ggplot2)
 library(hector)
-library(emo)
+# library(emo)
 library(here)
 
 # Set root directory
@@ -117,9 +117,9 @@ if(!SAME) {
   
   # Table
     summary_table <- cbind(squares, NRMSE)
-    return(knitr::kable(summary_table, digits = 3, 
+    knitr::kable(summary_table, digits = 3, 
                format.args = list(nsmall = 3, scientific = FALSE),
-               format = "markdown"))
+               format = "markdown")
   
   # Plot of numerical differences between versions
   
