Try breaking up chunks?

--- a/scripts/OutputDifferences.Rmd
+++ b/scripts/OutputDifferences.Rmd
@@ -116,11 +116,15 @@ if(!SAME) {
   colnames(NRMSE) <- "NRMSE"
   
   # Table
-    summary_table <- cbind(squares, NRMSE)
-    knitr::kable(summary_table, digits = 3, 
+  summary_table <- cbind(squares, NRMSE)
+  print(knitr::kable(summary_table, digits = 3, 
                format.args = list(nsmall = 3, scientific = FALSE),
-               format = "markdown")
-  
+               format = "markdown"))
+}
+```
+
+``` {r plots, include = FALSE}  
+if(!SAME) {
   # Plot of numerical differences between versions
   
   # Access units for legend
