--- a/scripts/OutputDifferences.Rmd
+++ b/scripts/OutputDifferences.Rmd
@@ -72,7 +72,7 @@ if (SAME) {
 }
 ```
 
-```{r summary-info, fig.width = 12, fig.height = 6, include = FALSE, results = 'asis'}
+```{r summary-info, fig.width = 12, fig.height = 6, echo = FALSE}
 if(!SAME) {
   # Organize data
   output %>%
@@ -117,9 +117,8 @@ if(!SAME) {
   
   # Table
   summary_table <- cbind(squares, NRMSE)
-  print(knitr::kable(summary_table, digits = 3, 
-               format.args = list(nsmall = 3, scientific = FALSE),
-               format = "markdown"))
+  knitr::kable(summary_table, digits = 3, 
+               format.args = list(nsmall = 3, scientific = FALSE))
 }
 ```
 
