Trying to fix leeyabot again

--- a/scripts/OutputDifferences.Rmd
+++ b/scripts/OutputDifferences.Rmd
@@ -2,20 +2,20 @@
 # This is the leeyabot Rmarkdown that generates the comment
 # and accompanying table and figure
 # It is run by the `leeyabot.yml` GitHub Action
-# Leeya Pressburger 2021
+# Leeya Pressburger 2022
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Differences in Hector outputs
 
-Hello, this is `leeyabot`! `r emo::ji("robot")`
+Hello, this is `leeyabot`! `r #emo::ji("robot")`
 
-``` {r differences, echo = FALSE, message = FALSE}
+``` {r differences, echo = FALSE, message = FALSE, include = FALSE}
 # Load packages
 library(dplyr)
 library(ggplot2)
 library(hector)
-library(emo)
+#library(emo)
 library(here)
 
 # Set root directory
@@ -26,7 +26,7 @@ path <- file.path(BASE_DIR, "tests", "testthat", "compdata", "hector_comp.csv")
 comp_data <- read.csv(path)
 
 # Variables of interest
-vars <- c(ATMOSPHERIC_C(), GLOBAL_TEMP(), RF_TOTAL())
+vars <- c(ATMOSPHERIC_CO2(), RF_TOTAL(), RF_CO2(), GLOBAL_TEMP())
 
 # Organize data
 compdata <- comp_data %>% 
@@ -40,28 +40,28 @@ compdata <- comp_data %>%
 version <- compdata$version[1]
 commit <- comp_data$commit[1]
 
-# Read in files for just RCP 4.5
+# Run core for SSP 245 and retrieve outputs
 ssp245 <- file.path(BASE_DIR, "inst", "input", "hector_ssp245.ini")
 
-# Run core and retrieve variable
 core <- newcore(ssp245)
 invisible(run(core))
 output <- fetchvars(core, core$strtdate:core$enddate, vars, "ssp245")
+shutdown(core)
+
 output <- output %>% 
   mutate(version = "latest") %>%
   arrange(variable)
 
 # Find differences between versions
-differences <- compdata %>% 
-  mutate(diff = output$value - compdata$value) %>% 
-  select(scenario, year, variable, units, version, diff)
+compdata <- compdata %>% 
+  mutate(diff = output$value - compdata$value)
 ```
 
 ```{r, check-any-change, echo=FALSE, results='asis'}
 # If there are no differences in outputs, do nothing
 # Otherwise, run summary table and graph code
-zeros <- rep(0, length(differences$diff))
-SAME <- isTRUE(all.equal(zeros, differences$diff, tolerance = 1e-7))
+zeros <- rep(0, length(compdata$diff))
+SAME <- isTRUE(all.equal(zeros, compdata$diff, tolerance = 1e-7))
 if (SAME) {
   cat("The current pull request's outputs do not differ from ", 
       version, " (", commit, ").", sep = "")
@@ -71,46 +71,44 @@ if (SAME) {
 }
 ```
 
-```{r summary-info, echo = FALSE, fig.width = 12, fig.height = 6, message = FALSE, include = FALSE}
+```{r summary-info, echo = FALSE, message = FALSE}
 if(!SAME) {
   # Organize data
   output %>%
     select(latest_version = value) -> new_values
   
   both_versions <- compdata %>%
-    select(year, variable, value) %>%
-    rename(comp_version = value) %>%
+    select(year, variable, value, comp_version = value) %>%
     cbind(new_values)
   
   # Define params
   years <- both_versions$year
   
   # Compute linear regression
-  linear <- by(both_versions, both_versions$variable, function(x) lm (both_versions$latest_version~both_versions$comp_version))
+  linear <- by(both_versions, both_versions$variable, 
+               function(x) lm (both_versions$latest_version ~ both_versions$comp_version))
   
-  # Access r squared
+  # Access R squared
   squares <- as.data.frame(sapply(linear, function(x) summary(x)$r.squared))
   colnames(squares) <- "R squared"
   
-  # Calculate RMSE
-  # Extract residuals
+  # Extract residuals...
   resid <- as.data.frame(sapply(linear, function(x) summary(x)$residuals))
   
-  # Define function
+  # ...and calculate RMSE
   RMSE <- function(res) {
     r <- sqrt(mean(res^2))
   }
   
-  # Find RMSE
   error <- as.data.frame(lapply(resid, RMSE))
   error <- t(error)
   
-  # Find mean of data to normalize
+  # Find mean of data
   mean <- both_versions %>% 
     group_by(variable) %>% 
     summarize(mean(comp_version))
   
-  # Divide RMSE by means
+  # Divide RMSE by means to normalize
   NRMSE <- as.data.frame(error[,1] / mean[,2])
   colnames(NRMSE) <- "NRMSE"
   
@@ -118,26 +116,49 @@ if(!SAME) {
   summary_table <- cbind(squares, NRMSE)
   knitr::kable(summary_table, digits = 3, 
                format.args = list(nsmall = 3, scientific = FALSE))
-  
+}
+```
+
+``` {r plots, include = FALSE}
+if(!SAME) {
   # Plot of numerical differences between versions
-  units <- c(unique(differences$units))
+  
+  # Access units for legend
+  units <- compdata %>% group_by(variable) %>% slice(1)
+  units <- units$units
   # Sort variables so that legend works
   vars <- sort(vars)
   
-  diff_plot <- ggplot(differences, aes(year, diff, color = variable)) +
+  diff_plot <- ggplot(compdata, aes(year, diff, color = variable)) +
     geom_hline(yintercept = 0, alpha = 0.5) +
     geom_line() +
-    facet_grid(variable~scenario, scales = "free") +
+    facet_grid(~variable, scales = "free") +
     scale_color_viridis_d(breaks = vars, labels = units) +
-    ggtitle(paste0("Differences relative to ", version, " (", commit, ")")) +
+    ggtitle(paste0("Differences relative to ", version, " (", commit, ")", " in ", compdata$scenario)) +
     labs(x = "Year", y = "Difference in value", col = "Units") +
-    scale_y_continuous(labels = scales::label_scientific(digits = 2)) + 
     theme_bw()
   
   # "Note that if an image is an output of your ML workflow (i.e., it is produced
   # by your workflow), you will need to use the cml-publish function to include 
   # it a CML report."  https://github.com/iterative/cml#cml-reports
   # So instead of printing the graph, we save it to a file
-  ggsave("diff_plot.png", plot = diff_plot)
+  ggsave("diff_plot.png", plot = diff_plot, height = 6, width = 9)
+  
+    # Plot of new commit values against comparison data
+  new_comp <- compdata %>%
+    mutate(new_value = output$value,
+           new_version = output$version)
+  
+  comp_plot <- ggplot(new_comp) +
+    geom_line(aes(year, value, color = version, linetype = units)) +
+    geom_line(aes(year, new_value, color = new_version, linetype = units)) +
+    scale_linetype_manual(values = c(5, 4, 1)) +
+    facet_wrap(~variable, scales = "free_y") +
+    scale_color_viridis_d(end = 0.5) +
+    ggtitle(paste0("Differences in output values relative to ", version, " (", commit, ")", " in ", compdata$scenario)) +
+    labs(x = "Year", y = "Value", color = "Version", linetype = "Units") +
+    theme_bw()
+  
+  ggsave("comp_plot.png", plot = comp_plot, height = 6, width = 9)
 }
 ```
